--- a/index.html
+++ b/index.html
@@ -8,14 +8,29 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"/>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
         }
+        #particles-js {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: 1;
+            pointer-events: none;
+        }
+        .content-wrapper {
+            position: relative;
+            z-index: 2;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-200">
-    <header class="bg-gray-800 text-white p-4">
+    <header class="bg-gray-800 text-white p-4 relative">
         <div class="container mx-auto flex justify-between items-center">
             <h1 class="text-2xl font-bold">Pooria Lakzian</h1>
             <nav>
@@ -29,22 +44,24 @@
         </div>
     </header>
     <main class="container mx-auto mt-8">
-        <section id="about" class="relative bg-gray-800 p-6 rounded-lg shadow-md mb-8">
-            <h2 class="text-2xl font-bold mb-4">About Me</h2>
-            <div class="flex items-center relative z-10">
-                <img src="https://storage.googleapis.com/a1aa/image/s5IWpbwALk65M5FAODfSIp8mwQWtMyfOdCeYoIuee0xu4ljeE.jpg" alt="A detailed portrait of the website owner" class="rounded-full mr-6" width="150" height="150"/>
-                <div>
-                    <p>I am Pooria Lakzian. I got my bachelor's in Computer Science from Iran University of Science and Technology (IUST) and I am passionate about AI/ML and their applications.</p>
-                    <div class="flex space-x-4 mt-4">
-                        <a href="path/to/your-cv.pdf" target="_blank" class="hover:text-gray-300"><i class="fas fa-file-alt text-2xl"></i></a>
-                        <a href="https://linkedin.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-linkedin text-2xl"></i></a>
-                        <a href="https://github.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-github text-2xl"></i></a>
-                        <a href="https://twitter.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-twitter text-2xl"></i></a>
-                        <a href="mailto:your-email@example.com" class="hover:text-gray-300"><i class="fas fa-envelope text-2xl"></i></a>
+        <section id="about" class="relative bg-gray-800 p-6 rounded-lg shadow-md mb-8 min-h-[400px] overflow-hidden">
+            <div id="particles-js"></div>
+            <div class="content-wrapper">
+                <h2 class="text-2xl font-bold mb-4">About Me</h2>
+                <div class="flex items-center">
+                    <img src="https://storage.googleapis.com/a1aa/image/s5IWpbwALk65M5FAODfSIp8mwQWtMyfOdCeYoIuee0xu4ljeE.jpg" alt="A detailed portrait of the website owner" class="rounded-full mr-6" width="150" height="150"/>
+                    <div>
+                        <p>I am Pooria Lakzian. I got my bachelor's in Computer Science from Iran University of Science and Technology (IUST) and I am passionate about AI/ML and their applications.</p>
+                        <div class="flex space-x-4 mt-4">
+                            <a href="path/to/your-cv.pdf" target="_blank" class="hover:text-gray-300"><i class="fas fa-file-alt text-2xl"></i></a>
+                            <a href="https://linkedin.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-linkedin text-2xl"></i></a>
+                            <a href="https://github.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-github text-2xl"></i></a>
+                            <a href="https://twitter.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-twitter text-2xl"></i></a>
+                            <a href="mailto:poorialakzian@gmail.com" class="hover:text-gray-300"><i class="fas fa-envelope text-2xl"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
-            <canvas id="aboutGraph" class="absolute top-0 left-0 w-full h-full opacity-25"></canvas>
         </section>
         <section id="education" class="bg-gray-800 p-6 rounded-lg shadow-md mb-8">
             <h2 class="text-2xl font-bold mb-4">Education</h2>
@@ -65,18 +82,21 @@
         </section>
         <section id="contact" class="bg-gray-800 p-6 rounded-lg shadow-md">
             <h2 class="text-2xl font-bold mb-4">Contact Me</h2>
-            <form action="#" method="POST" class="space-y-4">
+            <form id="contact-form" class="space-y-4">
                 <div>
                     <label for="name" class="block text-sm font-medium text-gray-400">Name</label>
-                    <input type="text" name="name" id="name" class="mt-1 block w-full p-2 border border-gray-600 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 bg-gray-700 text-gray-200"/>
+                    <input type="text" name="from_name" id="name" required class="mt-1 block w-full p-2 border border-gray-600 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 bg-gray-700 text-gray-200"/>
                 </div>
                 <div>
                     <label for="email" class="block text-sm font-medium text-gray-400">Email</label>
-                    <input type="email" name="email" id="email" class="mt-1 block w-full p-2 border border-gray-600 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 bg-gray-700 text-gray-200"/>
+                    <input type="email" name="from_email" id="email" required class="mt-1 block w-full p-2 border border-gray-600 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 bg-gray-700 text-gray-200"/>
                 </div>
                 <div>
                     <label for="message" class="block text-sm font-medium text-gray-400">Message</label>
-                    <textarea id="message" name="message" rows="4" class="mt-1 block w-full p-2 border border-gray-600 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 bg-gray-700 text-gray-200"></textarea>
+                    <textarea id="message" name="message" rows="4" required class="mt-1 block w-full p-2 border border-gray-600 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 bg-gray-700 text-gray-200"></textarea>
+                </div>
+                <div id="submit-status" class="hidden">
+                    <p class="text-green-500">Message sent successfully!</p>
                 </div>
                 <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700">Send Message</button>
             </form>
@@ -93,49 +113,117 @@
         </div>
     </footer>
     <script>
-        const ctx = document.getElementById('aboutGraph').getContext('2d');
-        const aboutGraph = new Chart(ctx, {
-            type: 'line',
-            data: {
-                labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
-                datasets: [{
-                    label: 'Dynamic Data',
-                    data: [65, 59, 80, 81, 56, 55, 40],
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 1,
-                    fill: false
-                }]
-            },
-            options: {
-                responsive: true,
-                maintainAspectRatio: false,
-                scales: {
-                    x: {
-                        display: false
-                    },
-                    y: {
-                        display: false
-                    }
-                },
-                plugins: {
-                    legend: {
-                        display: false
-                    },
-                    tooltip: {
-                        enabled: false
-                    }
-                },
-                animation: {
-                    duration: 2000,
-                    easing: 'easeInOutQuad'
-                }
+        // Initialize EmailJS with proper error handling
+        (function() {
+            try {
+                emailjs.init("QpYIIsZjThnFDcnzB"); // Public key
+            } catch (err) {
+                console.error('EmailJS initialization error:', err);
             }
+        })();
+
+        // Handle form submission with improved error handling
+        document.getElementById('contact-form').addEventListener('submit', function(event) {
+            event.preventDefault();
+            
+            const submitButton = this.querySelector('button[type="submit"]');
+            const statusDiv = document.getElementById('submit-status');
+            
+            submitButton.disabled = true;
+            submitButton.textContent = 'Sending...';
+
+            // Add loading state
+            statusDiv.innerHTML = '<p class="text-blue-500">Sending message...</p>';
+            statusDiv.classList.remove('hidden');
+
+            emailjs.sendForm('service_ced2mjn', 'template_jlq64qb', this)
+                .then(function() {
+                    statusDiv.innerHTML = '<p class="text-green-500">Message sent successfully! I will get back to you soon.</p>';
+                    submitButton.textContent = 'Send Message';
+                    submitButton.disabled = false;
+                    event.target.reset();
+                })
+                .catch(function(error) {
+                    console.error('Failed to send message:', error);
+                    statusDiv.innerHTML = '<p class="text-red-500">Failed to send message. Please try again or email me directly at poorialakzian@gmail.com</p>';
+                    submitButton.textContent = 'Send Message';
+                    submitButton.disabled = false;
+                });
         });
 
-        setInterval(() => {
-            aboutGraph.data.datasets[0].data = aboutGraph.data.datasets[0].data.map(() => Math.floor(Math.random() * 100));
-            aboutGraph.update();
-        }, 3000);
+        // Initialize particles.js
+        particlesJS('particles-js', {
+            particles: {
+                number: {
+                    value: 80,
+                    density: {
+                        enable: true,
+                        value_area: 800
+                    }
+                },
+                color: {
+                    value: '#ffffff'
+                },
+                shape: {
+                    type: 'circle'
+                },
+                opacity: {
+                    value: 0.5,
+                    random: false
+                },
+                size: {
+                    value: 3,
+                    random: true
+                },
+                line_linked: {
+                    enable: true,
+                    distance: 150,
+                    color: '#ffffff',
+                    opacity: 0.4,
+                    width: 1
+                },
+                move: {
+                    enable: true,
+                    speed: 2,
+                    direction: 'none',
+                    random: false,
+                    straight: false,
+                    out_mode: 'out',
+                    bounce: false,
+                    attract: {
+                        enable: true,
+                        rotateX: 600,
+                        rotateY: 1200
+                    }
+                }
+            },
+            interactivity: {
+                detect_on: 'canvas',
+                events: {
+                    onhover: {
+                        enable: true,
+                        mode: 'grab'
+                    },
+                    onclick: {
+                        enable: true,
+                        mode: 'push'
+                    },
+                    resize: true
+                },
+                modes: {
+                    grab: {
+                        distance: 140,
+                        line_linked: {
+                            opacity: 1
+                        }
+                    },
+                    push: {
+                        particles_nb: 4
+                    }
+                }
+            },
+            retina_detect: true
+        });
     </script>
 </body>
 </html> 
