--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
             <h2 class="text-2xl font-bold mb-4">Education</h2>
             <ul class="list-disc pl-5">
                 <li><strong>Bachelor of Science in Computer Science</strong>, Iran University of Science and Technology (IUST), 2015-2019</li>
-                <li><strong>Master of Science in Software Engineering</strong>, University of Example, 2019-2021</li>
+                <li><strong>Diploma in Mathematics and Physics</strong>, National Organization for Development of Exceptional Talents, 2014-2020</li>
             </ul>
         </section>
         <section id="research" class="bg-gray-800 p-6 rounded-lg shadow-md mb-8">
             <h2 class="text-2xl font-bold mb-4">Research Interests</h2>
-            <p>My research interests include:</p>
             <ul class="list-disc pl-5">
-                <li>Web Development and Design</li>
-                <li>Machine Learning and Artificial Intelligence</li>
-                <li>Human-Computer Interaction</li>
-                <li>Data Science and Big Data Analytics</li>
+                <li>Machine learning</li>
+                <li>Applied AI/ML</li>
+                <li>Computer Vision</li>
+                <li>NLP</li>
+                <li>Trustworthy ML</li>
             </ul>
         </section>
         <section id="contact" class="bg-gray-800 p-6 rounded-lg shadow-md">
@@ -104,7 +104,7 @@
     </main>
     <footer class="bg-gray-800 text-white p-4 mt-8">
         <div class="container mx-auto text-center">
-            <p>© 2023 Pooria Lakzian. All rights reserved.</p>
+            <p>© 20255 Pooria Lakzian. All rights reserved.</p>
             <div class="flex justify-center space-x-4 mt-2">
                 <a href="https://twitter.com" class="hover:text-gray-300"><i class="fab fa-twitter"></i></a>
                 <a href="https://linkedin.com" class="hover:text-gray-300"><i class="fab fa-linkedin"></i></a>
