--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         #particles-js {
             position: absolute;
             width: 100%;
-            height: 100%;
+            height: 50%;
             top: 0;
             left: 0;
             z-index: 1;
@@ -54,9 +54,8 @@
                         <p>I am Pooria Lakzian. I got my bachelor's in Computer Science from Iran University of Science and Technology (IUST) and I am passionate about AI/ML and their applications.</p>
                         <div class="flex space-x-4 mt-4">
                             <a href="path/to/your-cv.pdf" target="_blank" class="hover:text-gray-300"><i class="fas fa-file-alt text-2xl"></i></a>
-                            <a href="https://linkedin.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-linkedin text-2xl"></i></a>
-                            <a href="https://github.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-github text-2xl"></i></a>
-                            <a href="https://twitter.com" target="_blank" class="hover:text-gray-300"><i class="fab fa-twitter text-2xl"></i></a>
+                            <a href="www.linkedin.com/in/pooria-lakzian-a2828b291" target="_blank" class="hover:text-gray-300"><i class="fab fa-linkedin text-2xl"></i></a>
+                            <a href="https://github.com/pouriazzz" target="_blank" class="hover:text-gray-300"><i class="fab fa-github text-2xl"></i></a>
                             <a href="mailto:poorialakzian@gmail.com" class="hover:text-gray-300"><i class="fas fa-envelope text-2xl"></i></a>
                         </div>
                     </div>
@@ -104,7 +103,7 @@
     </main>
     <footer class="bg-gray-800 text-white p-4 mt-8">
         <div class="container mx-auto text-center">
-            <p>© 20255 Pooria Lakzian. All rights reserved.</p>
+            <p>© 2025 Pooria Lakzian. All rights reserved.</p>
             <div class="flex justify-center space-x-4 mt-2">
                 <a href="https://twitter.com" class="hover:text-gray-300"><i class="fab fa-twitter"></i></a>
                 <a href="https://linkedin.com" class="hover:text-gray-300"><i class="fab fa-linkedin"></i></a>
@@ -155,10 +154,10 @@
         particlesJS('particles-js', {
             particles: {
                 number: {
-                    value: 80,
+                    value: 300,
                     density: {
                         enable: true,
-                        value_area: 800
+                        value_area: 600
                     }
                 },
                 color: {
@@ -168,8 +167,8 @@
                     type: 'circle'
                 },
                 opacity: {
-                    value: 0.5,
-                    random: false
+                    value: 0.7,
+                    random: True
                 },
                 size: {
                     value: 3,
@@ -177,16 +176,16 @@
                 },
                 line_linked: {
                     enable: true,
-                    distance: 150,
+                    distance: 100,
                     color: '#ffffff',
-                    opacity: 0.4,
+                    opacity: 0.3,
                     width: 1
                 },
                 move: {
                     enable: true,
                     speed: 2,
                     direction: 'none',
-                    random: false,
+                    random: True,
                     straight: false,
                     out_mode: 'out',
                     bounce: false,
