--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="content-wrapper">
                 <h2 class="text-2xl font-bold mb-4">About Me</h2>
                 <div class="flex items-center">
-                    <img src="https://github.com/pouriazzz/pouriazzz.github.io/blob/main/20241015_103921.jpg" alt="A detailed portrait of the website owner" class="rounded-full mr-6" width="150" height="150"/>
+                    <img src="20241015_103921.jpg" alt="A detailed portrait of the website owner" class="rounded-full mr-6" width="150" height="150"/>
                     <div>
                         <p>I am Pooria Lakzian. I got my bachelor's in Computer Science from Iran University of Science and Technology (IUST) and I am passionate about AI/ML and their applications.</p>
                         <div class="flex space-x-4 mt-4">
