--- a/index.html
+++ b/index.html
@@ -152,77 +152,83 @@
 
         // Initialize particles.js
         particlesJS('particles-js', {
-            particles: {
-                number: {
-                    value: 300,
-                    density: {
-                        enable: true,
-                        value_area: 800
-                    }
-                },
-                color: {
-                    value: '#ffffff'
-                },
-                shape: {
-                    type: 'circle'
-                },
-                opacity: {
-                    value: 0.7,
-                    random: True
-                },
-                size: {
-                    value: 3,
-                    random: true
-                },
+    particles: {
+        number: {
+            value: 150, // Reduced from 300 to make them more clustered
+            density: {
+                enable: true,
+                value_area: 400 // Reduced from 800 for tighter grouping
+            }
+        },
+        color: {
+            value: '#ffffff'
+        },
+        shape: {
+            type: 'circle'
+        },
+        opacity: {
+            value: 0.7,
+            random: true // Fixed capitalization (was True)
+        },
+        size: {
+            value: 3,
+            random: true
+        },
+        line_linked: {
+            enable: true,
+            distance: 80, // Reduced from 100 for closer connections
+            color: '#ffffff',
+            opacity: 0.4,
+            width: 1
+        },
+        move: {
+            enable: true,
+            speed: 3, // Slightly increased for more dynamic movement
+            direction: 'none',
+            random: true, // Fixed capitalization
+            straight: false,
+            out_mode: 'out',
+            bounce: false,
+            attract: {
+                enable: true,
+                rotateX: 600,
+                rotateY: 1200
+            }
+        }
+    },
+    interactivity: {
+        detect_on: 'canvas',
+        events: {
+            onhover: {
+                enable: true,
+                mode: ['grab', 'bubble'] // Added bubble effect for better attraction
+            },
+            onclick: {
+                enable: true,
+                mode: 'push'
+            },
+            resize: true
+        },
+        modes: {
+            grab: {
+                distance: 100, // Reduced from 140 for stronger attraction
                 line_linked: {
-                    enable: true,
-                    distance: 100,
-                    color: '#ffffff',
-                    opacity: 0.3,
-                    width: 1
-                },
-                move: {
-                    enable: true,
-                    speed: 2,
-                    direction: 'none',
-                    random: True,
-                    straight: false,
-                    out_mode: 'out',
-                    bounce: false,
-                    attract: {
-                        enable: true,
-                        rotateX: 600,
-                        rotateY: 1200
-                    }
+                    opacity: 1
                 }
             },
-            interactivity: {
-                detect_on: 'canvas',
-                events: {
-                    onhover: {
-                        enable: true,
-                        mode: 'grab'
-                    },
-                    onclick: {
-                        enable: true,
-                        mode: 'push'
-                    },
-                    resize: true
-                },
-                modes: {
-                    grab: {
-                        distance: 140,
-                        line_linked: {
-                            opacity: 1
-                        }
-                    },
-                    push: {
-                        particles_nb: 4
-                    }
-                }
+            bubble: {  // Added bubble mode for mouse attraction
+                distance: 100,
+                size: 5,
+                duration: 2,
+                opacity: 0.8
             },
-            retina_detect: true
-        });
+            push: {
+                particles_nb: 4
+            }
+        }
+    },
+    retina_detect: true
+});
     </script>
 </body>
 </html> 
