--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             top: 0;
             left: 0;
             z-index: 1;
-            pointer-events: none;
+            background: transparent;
         }
         .content-wrapper {
             position: relative;
