--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             position: relative;
             z-index: 2;
         }
+        #about {
+        position: relative;
+        overflow: hidden;
+    }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-200">
